crates/xlate/tests/snapshots/golden_matrix__instr_system_on_reasoning__o4-mini__20260910__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "instructions": "Be terse.",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "What is 2+2?"
        }
      ]
    }
  ],
  "max_output_tokens": 128
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
